@@ -64,7 +64,7 @@ NIH_BEGIN_EXTERN
 pid_t process_spawn         (Job *job, char * const argv[]);
 int   process_kill          (Job *job, pid_t pid, int force);
 
-int   process_setup_console (ConsoleType type);
+int   process_setup_console (Job *job, ConsoleType type);
 
 NIH_END_EXTERN
 
